--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_invoice_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_invoice_history.xml
@@ -12,7 +12,7 @@
         android:id="@+id/rideHistoryItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12px"
+        android:layout_marginTop="36px"
         android:background="@drawable/white_bg"
         android:orientation="horizontal">
 
@@ -26,15 +26,15 @@
             >
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15px"
-                android:layout_marginTop="32px">
+                android:layout_marginLeft="15px">
 
                 <RelativeLayout
                     android:id="@+id/relativeLayoutStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:gravity="center_vertical">
 
                     <ImageView
@@ -58,6 +58,113 @@
 
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+
+                    <RelativeLayout
+                        android:id="@+id/dateTimeRlFrom"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:splitMotionEvents="false">
+
+                        <TextView
+                            android:id="@+id/dateTimeTextFrom"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15px"
+                            android:visibility="gone"
+                            android:singleLine="true"
+                            android:text="@string/from"
+                            android:textColor="@color/black"
+                            android:textSize="30px"
+                            />
+
+                        <!--<ImageView-->
+                        <!--android:id="@+id/imageViewTimeFrom"-->
+                        <!--android:layout_width="30px"-->
+                        <!--android:layout_height="30px"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_marginLeft="15px"-->
+                        <!--android:layout_toRightOf="@+id/dateTimeTextFrom"-->
+                        <!--android:src="@drawable/date_orange_icon"-->
+                        <!--android:tag="mwar"/>-->
+
+                        <TextView
+                            android:id="@+id/dateTimeValueFrom"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="5px"
+                            android:layout_toRightOf="@+id/dateTimeTextFrom"
+                            android:singleLine="true"
+                            android:text="23/01"
+                            android:textColor="@color/black_text_v2"
+                            android:textSize="32px"
+                            />
+
+                    </RelativeLayout>
+
+
+                    <ImageView
+                        android:layout_width="10px"
+                        android:layout_height="2px"
+                        android:layout_toRightOf="@+id/dateTimeRlFrom"
+                        android:background="@color/black_text_v2"
+                        android:layout_marginLeft="12px"
+                        android:layout_centerVertical="true"
+                        />
+
+
+                    <RelativeLayout
+                        android:id="@+id/dateTimeRlTo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="36px"
+                        android:layout_toRightOf="@+id/dateTimeRlFrom"
+                        android:splitMotionEvents="false">
+
+                        <TextView
+                            android:id="@+id/dateTimeTextTo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15px"
+                            android:singleLine="true"
+                            android:text="@string/to"
+                            android:visibility="gone"
+                            android:textColor="@color/black"
+                            android:textSize="30px"
+                            />
+
+                        <!--<ImageView-->
+                        <!--android:id="@+id/imageViewTimeTo"-->
+                        <!--android:layout_width="30px"-->
+                        <!--android:layout_height="30px"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_toRightOf="@+id/dateTimeTextTo"-->
+                        <!--android:layout_marginLeft="15px"-->
+                        <!--android:src="@drawable/date_orange_icon"-->
+                        <!--android:tag="mwar"/>-->
+
+                        <TextView
+                            android:id="@+id/dateTimeValueTo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="5px"
+                            android:layout_toRightOf="@+id/dateTimeTextTo"
+                            android:singleLine="true"
+                            android:text="23/01"
+                            android:textColor="@color/black_text_v2"
+                            android:textSize="32px"
+                            />
+
+                    </RelativeLayout>
+                </RelativeLayout>
+
 
                 <TextView
                     android:id="@+id/textViewInvoiceId"
@@ -67,23 +174,31 @@
                     android:layout_marginTop="16px"
                     android:singleLine="true"
                     android:text="Invoice ID: 1111"
+                    android:visibility="gone"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="30px"/>
 
 
                 <TextView
                     android:id="@+id/textViewInvoiceFare"
-                    android:layout_width="260px"
+                    android:layout_width="220px"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="20px"
-                    android:background="@drawable/background_white_rounded_orange_bordered"
-                    android:gravity="center"
-                    android:padding="10px"
+                    android:layout_marginRight="72px"
+                    android:layout_centerVertical="true"
+                    android:gravity="right"
                     android:singleLine="true"
                     android:text="@string/rupee_zero_zero"
-                    android:textColor="@color/new_orange"
-                    android:textSize="48px"/>
+                    android:textColor="@color/grey_light_v2"
+                    android:textSize="32px"/>
+
+                <ImageView
+                    android:layout_width="24px"
+                    android:layout_height="15px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="36px"
+                    android:src="@drawable/arrow_icon_normal"/>
 
             </RelativeLayout>
 
@@ -92,6 +207,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12px"
+                android:visibility="gone"
                 android:gravity="center_vertical"
                 android:splitMotionEvents="false">
 
@@ -123,146 +239,20 @@
 
             </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12px"
-                android:gravity="center_vertical">
-
-                <RelativeLayout
-                    android:id="@+id/dateTimeRlFrom"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:splitMotionEvents="false">
-
-                    <TextView
-                        android:id="@+id/dateTimeTextFrom"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="15px"
-                        android:singleLine="true"
-                        android:text="@string/from"
-                        android:textColor="@color/black"
-                        android:textSize="30px"
-                        />
-
-                    <!--<ImageView-->
-                    <!--android:id="@+id/imageViewTimeFrom"-->
-                    <!--android:layout_width="30px"-->
-                    <!--android:layout_height="30px"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_marginLeft="15px"-->
-                    <!--android:layout_toRightOf="@+id/dateTimeTextFrom"-->
-                    <!--android:src="@drawable/date_orange_icon"-->
-                    <!--android:tag="mwar"/>-->
-
-                    <TextView
-                        android:id="@+id/dateTimeValueFrom"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="5px"
-                        android:layout_toRightOf="@+id/dateTimeTextFrom"
-                        android:singleLine="true"
-                        android:text="23 June, 2014"
-                        android:textColor="@color/new_orange"
-                        android:textSize="34px"
-                        />
-
-                </RelativeLayout>
-
-
-                <RelativeLayout
-                    android:id="@+id/dateTimeRlTo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="24px"
-                    android:layout_toRightOf="@+id/dateTimeRlFrom"
-                    android:splitMotionEvents="false">
-
-                    <TextView
-                        android:id="@+id/dateTimeTextTo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="15px"
-                        android:singleLine="true"
-                        android:text="@string/to"
-                        android:textColor="@color/black"
-                        android:textSize="30px"
-                        />
-
-                    <!--<ImageView-->
-                    <!--android:id="@+id/imageViewTimeTo"-->
-                    <!--android:layout_width="30px"-->
-                    <!--android:layout_height="30px"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_toRightOf="@+id/dateTimeTextTo"-->
-                    <!--android:layout_marginLeft="15px"-->
-                    <!--android:src="@drawable/date_orange_icon"-->
-                    <!--android:tag="mwar"/>-->
-
-                    <TextView
-                        android:id="@+id/dateTimeValueTo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="5px"
-                        android:layout_toRightOf="@+id/dateTimeTextTo"
-                        android:singleLine="true"
-                        android:text="23 June, 2014"
-                        android:textColor="@color/new_orange"
-                        android:textSize="34px"
-                        />
-
-                </RelativeLayout>
-            </RelativeLayout>
-
 
         </LinearLayout>
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="290px"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_marginLeft="20px"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--android:background="@drawable/background_white_rounded_orange_bordered">-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/textViewInvoiceFare"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:gravity="center"-->
-        <!--android:singleLine="true"-->
-        <!--android:layout_marginTop="12px"-->
-        <!--android:text="@string/rupee_zero_zero"-->
-        <!--android:textColor="@color/new_orange"-->
-        <!--android:textSize="55px"/>-->
-
-        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-        <!--&lt;!&ndash;android:id="@+id/textViewInvoiceF"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:gravity="center"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:singleLine="true"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:text="Amount Credited"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_marginBottom="12px"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:textColor="@color/new_orange"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:textSize="32px"/>&ndash;&gt;-->
-
-        <!--</LinearLayout>-->
 
     </LinearLayout>
 
     <ImageView
         android:layout_width="700px"
         android:layout_height="3px"
+        android:layout_marginBottom="2px"
         android:layout_below="@+id/rideHistoryItem"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24px"
-        android:background="@color/menu_black"/>
+        android:layout_marginTop="36px"
+        android:background="@color/grey_light"/>
 
 
 </RelativeLayout>
