--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_info.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/linear"
-              android:orientation="horizontal"
-              android:layout_gravity="center_horizontal"
-              android:layout_width="wrap_content"
+              android:gravity="center_horizontal"
+              android:layout_width="match_parent"
               android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="50px"
+        android:layout_marginTop="25px"
+        android:orientation="horizontal">
+
 
     <TextView
         android:id="@+id/textViewInfoText"
@@ -27,11 +33,13 @@
         android:textSize="30px"/>
 
     <ImageView
+        android:id="@+id/imageViewArrow"
         android:layout_width="23px"
         android:layout_height="15px"
         android:layout_marginLeft="14px"
-        android:layout_marginTop="12px"
+        android:layout_marginTop="14px"
         android:src="@drawable/audit_next_arrow"/>
 
+    </LinearLayout>
 
 </LinearLayout>
