--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/linearLayoutRideItem"
-              android:orientation="horizontal"
-              android:layout_gravity="center_horizontal"
-              android:layout_width="540px"
+              android:gravity="center_horizontal"
+              android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-    android:id="@+id/textViewInfoText"
-    android:layout_width="400px"
-    android:layout_height="45px"
-    android:gravity="center_vertical"
-    android:text="@string/jugnoo_cut"
-    android:textColor="@color/black_text_v2"
-    android:textSize="30px"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="60px">
+
+        <TextView
+        android:id="@+id/textViewInfoText"
+        android:layout_width="400px"
+        android:layout_height="45px"
+        android:gravity="center_vertical"
+        android:text="@string/jugnoo_cut"
+        android:textColor="@color/black_text_v2"
+        android:textSize="30px"/>
 
 
-    <TextView
-    android:id="@+id/textViewInfoValue"
-    android:layout_width="140px"
-    android:layout_height="wrap_content"
-    android:layout_alignParentRight="true"
-    android:gravity="center_vertical|right"
-    android:text="0"
-    android:textColor="@color/black_text_v2"
-    android:textSize="30px"/>
+        <TextView
+        android:id="@+id/textViewInfoValue"
+        android:layout_width="140px"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:gravity="center_vertical|right"
+        android:text="0"
+        android:textColor="@color/black_text_v2"
+        android:textSize="30px"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
