feature_new_ui_v2: invoice details added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_high_demand_areas.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_high_demand_areas.xml
@@ -9,7 +9,7 @@
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
-        android:background="@color/menu_black"
+        android:background="@color/blue_black_v2"
         android:splitMotionEvents="false" >
 
         <Button
