--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="@string/no_missed_rides_currently"
+        android:text="@string/tap_to_retry"
         android:textColor="@color/black"
         android:textSize="@dimen/button_text_size" />
 
