--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="horizontal"
-        android:layout_height="60px">
+        android:layout_marginTop="24px"
+        android:layout_height="wrap_content">
 
         <TextView
         android:id="@+id/textViewInfoText"
