--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -262,7 +262,6 @@
                 android:id="@+id/homeRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -282,7 +281,7 @@
                     android:layout_toRightOf="@+id/imageViewHomeIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/home"
-                    android:textColor="@color/red_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -291,7 +290,6 @@
                 android:id="@+id/earningsRL"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -300,7 +298,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/earnings_v2"
+                    android:src="@drawable/earningv2_selector"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -311,7 +309,7 @@
                     android:layout_toRightOf="@+id/imageViewEarningIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/earnings"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -321,7 +319,6 @@
                 android:id="@+id/paymentRL"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -330,7 +327,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/invoices_v2"
+                    android:src="@drawable/invoices_v2_selector"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -341,7 +338,7 @@
                     android:layout_toRightOf="@+id/imageViewInvoicesIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/Invoices"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -350,7 +347,6 @@
                 android:id="@+id/relativeLayoutSuperDrivers"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -359,7 +355,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/super_driver_v2"
+                    android:src="@drawable/super_driver_v2_selector"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -370,7 +366,7 @@
                     android:layout_toRightOf="@+id/imageViewSuperDriverIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/super_driver"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -379,7 +375,6 @@
                 android:id="@+id/auditRL"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:visibility="visible"
                 android:splitMotionEvents="false">
 
@@ -390,7 +385,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/audit_v2"
+                    android:src="@drawable/audit_v2_selector"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -401,7 +396,7 @@
                     android:layout_toRightOf="@+id/imageViewAuditIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/audit_lower"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -410,7 +405,6 @@
                 android:id="@+id/inviteFriendRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -419,7 +413,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/invite_n_earn_v2"
+                    android:src="@drawable/invite_n_earn_v2_selector"
                     android:tag="mwar"/>
 
                 <TextView
@@ -430,7 +424,7 @@
                     android:layout_toRightOf="@+id/imageViewInviteErnIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/invite_earn"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
                 <ImageView
@@ -477,7 +471,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/sharing_rides"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -497,7 +491,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/fare_details"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -528,7 +522,6 @@
                 android:id="@+id/callUsRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -537,7 +530,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/call_v2"
+                    android:src="@drawable/call_v2_selector"
                     android:tag="mwar"/>
 
                 <TextView
@@ -548,7 +541,7 @@
                     android:layout_toRightOf="@+id/imageViewCallIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/call_us"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -568,7 +561,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/destination_menu"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -588,7 +581,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/Paytm_recharge"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -598,7 +591,6 @@
                 android:id="@+id/relativeLayoutRateCard"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false"
                 android:visibility="visible">
 
@@ -608,7 +600,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/rate_card_v2"
+                    android:src="@drawable/rate_card_v2_selector"
                     android:tag="mwar"/>
 
                 <TextView
@@ -619,7 +611,7 @@
                     android:layout_toRightOf="@+id/imageViewRateCardIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/rate_card"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -629,7 +621,7 @@
                 android:id="@+id/languagePrefrencesRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
+
                 android:splitMotionEvents="false"
                 android:visibility="visible">
 
@@ -639,7 +631,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/language_pref_v2"
+                    android:src="@drawable/language_pref_v2_selector"
                     android:tag="mwar"/>
 
                 <TextView
@@ -650,7 +642,7 @@
                     android:layout_toRightOf="@+id/imageViewLangPrefIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/language_preferences"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -670,7 +662,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/terms"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -679,7 +671,6 @@
                 android:id="@+id/logoutRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:background="@drawable/menu_item_selector"
                 android:splitMotionEvents="false">
 
                 <TextView
@@ -689,7 +680,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/logout"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/text_color_blackv2_redv2_selector"
                     android:textSize="34px"/>
             </RelativeLayout>
 
