--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details_new.xml
@@ -53,7 +53,7 @@
             android:layout_toRightOf="@+id/imageViewTime"
             android:singleLine="true"
             android:text="23 June, 2014 18:88 AM"
-            android:textColor="@color/new_orange"
+            android:textColor="@color/grey_light_v2"
             android:textSize="32px"
             />
 
@@ -338,7 +338,7 @@
             android:id="@+id/linearLayoutTo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20px"
+            android:layout_marginTop="1px"
             android:layout_marginLeft="48px"
             android:layout_marginRight="20px"
             android:splitMotionEvents="false">
@@ -354,34 +354,6 @@
             </product.clicklabs.jugnoo.driver.utils.NonScrollListView>
 
         </LinearLayout>
-
-        <!--<LinearLayout-->
-            <!--android:id="@+id/linearLayoutTo"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="20px"-->
-            <!--android:layout_marginLeft="48px"-->
-            <!--android:layout_marginRight="20px"-->
-            <!--android:splitMotionEvents="false">-->
-
-            <!--<ImageView-->
-                <!--android:layout_width="17px"-->
-                <!--android:layout_height="17px"-->
-                <!--android:layout_centerHorizontal="true"-->
-                <!--android:id="@+id/to"-->
-                <!--android:background="@drawable/end_marker_v2"/>-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/textViewToValue"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="22px"-->
-                <!--android:text="Elante shjksfjkrhldehkfthlrtewterwtrwtywery"-->
-                <!--android:layout_marginBottom="0px"-->
-                <!--android:textColor="@color/bg_grey_opaque"-->
-                <!--android:textSize="20px"/>-->
-
-        <!--</LinearLayout>-->
 
         <!-- map layout -->
 
