--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_address.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_address.xml
@@ -12,25 +12,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/linearLayoutTo"
+        android:gravity="center_vertical"
+        android:layout_marginTop="10px"
         android:layout_height="wrap_content"
         android:splitMotionEvents="false">
 
-        <!--<ImageView-->
-            <!--android:id="@+id/destination"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:background="@drawable/red_dot_icon"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/textViewToValue"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="0px"-->
-            <!--android:layout_marginLeft="70px"-->
-            <!--android:text="Elante shjksfjkrhldehkfthlrtewterwtrwtywery"-->
-            <!--android:textColor="@color/bg_grey_opaque"-->
-            <!--android:textSize="28px"/>-->
 
 
         <ImageView
@@ -46,7 +32,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="22px"
             android:text="Elante shjksfjkrhldehkfthlrtewterwtrwtywery"
-            android:layout_marginBottom="0px"
             android:textColor="@color/bg_grey_opaque"
             android:textSize="20px"/>
 
